# jx1-vs2022

./: CPP17_MIGRATION.md  README.md
SwordOnline/Lib/debug/: CoreServer.lib  JpgLib.lib  KMp3Lib.lib  engine.lib
SwordOnline/Sources/: .clang-tidy  .gitignore  ARCHITECTURE.md  Architecture_Overview.md  Assets_Blueprint.md  Audio_Blueprint.md  Bishop_Blueprint.md  Core_Analysis.md  Database_Blueprint.md  Engine_Analysis.md  GameServer_Blueprint.md  Game_Blueprint.md  Goddess_Blueprint.md  JXAll.sln  Linux_Deployment_Impact_Report.md  MVP_Goals.md  Platform_Blueprint.md  README.md  Renderer_Blueprint.md  Represent3_Analysis.md  S3Relay_Blueprint.md  Scripting_Blueprint.md  Server_Platform_Blueprint.md  Shared_Blueprint.md  apply-fixes-candidates.txt  clang-tidy-applied-candidates.txt  clang-tidy-fix-mentions.txt  compile_commands.json
SwordOnline/Sources/Core/: Core.vcxproj
SwordOnline/Sources/Core/Src/: KNpcAI.cpp
SwordOnline/Sources/Engine/: Engine.vcxproj
SwordOnline/Sources/JpgLib/: JpgLib.vcxproj
SwordOnline/Sources/KMp3LibClass/: KMp3LibClass.vcxproj
SwordOnline/Sources/NextGenJX/: CMakeLists.txt
SwordOnline/Sources/NextGenJX/include/Platform/: HiResTimer.h  InputManager.h  Window.h
SwordOnline/Sources/NextGenJX/src/: main.cpp
SwordOnline/Sources/NextGenJX/src/Platform/: CMakeLists.txt  HiResTimer.cpp  InputManager.cpp  Window.cpp
SwordOnline/Sources/S3Client/: S3Client.vcxproj  S3Client.vcxproj.filters
SwordOnline/Sources/tools/: generate_compile_commands.ps1  generate_compile_commands_improved.ps1  run_clang_tidy.ps1
(+18 files in other folders)
